added edit and delete functions with few loose ends

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <body>
   <div id="chart"></div>
   <div class="container">
-    <div class="row">
+    
+    <div class="row cc-form">
       <div class="col-xs-12">
         <div class="col-xs-2 labelcol">
           <label class="cclabel col-xs-12">Title:</label>
@@ -46,8 +47,31 @@
           <input id="content" class="input-bar" type="text">
           <input id="date" class="input-bar" type="date">
         </div>
-        <button class="col-xs-offset-1 col-xs-4 ccbutton">POST!
+        <button class="col-xs-offset-1 col-xs-4 post-button">POST!
         </button>
+        <button class="col-xs-offset-1 col-xs-4 edit-button">EDIT!
+        </button>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class="col-xs-12 anno-header">
+        <div class="col-xs-2">Date:
+        </div>
+        <div class="col-xs-2">Title:
+        </div>
+        <div class="col-xs-4">Content:
+        </div>
+        <div class="col-xs-offset-1 col-xs-1">Modify:
+        </div>
+        <div class="col-xs-offset-1 col-xs-1">Delete:
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 anno-insert">
+        
       </div>
     </div>
   </div>
