moment js added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- highcharts library -->
   <script src="js/highstock.js"></script>
   <script src="js/exporting.js"></script>
+  <script src="js/moment.min.js"></script>
   <!-- custom css and jquery -->
   <link rel="stylesheet" type="text/css" href="/css/custom.css">
   <script src="js/application.js"></script>
@@ -43,7 +44,7 @@
           <label class="cclabel col-xs-12">Date:</label>
         </div>
         <div class="col-xs-5 inputcol">
-          <input id="title" class="input-bar" type="text">
+          <input id="title" data-id='hihi' class="input-bar" type="text">
           <input id="content" class="input-bar" type="text">
           <input id="date" class="input-bar" type="date">
         </div>
